Actualización masiva de UI y mejoras en informes
Se han realizado múltiples cambios en la interfaz de usuario y en la gestión de informes, incluyendo:

- Actualización de imágenes y textos en `MainPage.xaml`.
- Rediseño de interfaces en `AddEditReservaView.xaml` y `AddEditServicioAdicionalView.xaml`.
- Reorganización de botones en `ReservasView.xaml` y `ServiciosAdicionalesView.xaml`.
- Ampliación del conjunto de datos `ReservasHoteleriaDataSet` con nuevas tablas y métodos.
- Adición de nuevos informes RDLC para empleados, habitaciones, servicios y servicios adicionales.
- Creación de nuevas páginas y componentes en Blazor para la gestión de empleados, habitaciones, reservas y servicios.
- Implementación de autenticación con Firebase en `Login.razor` y `SingUp.razor`.
 Y proyecto finalizado :)

--- a/ReservaHoteleriaApp/ReservaShell.xaml
+++ b/ReservaHoteleriaApp/ReservaShell.xaml
@@ -31,7 +31,7 @@
         <ShellContent Title="Inicio" ContentTemplate="{DataTemplate local:MainPage}" />
 
         <Tab Title="Reservas"
-             Icon="reserva.png">
+             Icon="logoreserva.png">
 
             <ShellContent 
                 Title="Lista de Reservas"
@@ -45,7 +45,7 @@
         </Tab>
 
         <Tab Title="Servicios Adicionales"
-             Icon="servicio.png">
+             Icon="logoservicios.png">
 
             <ShellContent Title="Lista Servicio Adicional"
                  ContentTemplate="{DataTemplate views:ServiciosAdicionalesView}"
@@ -61,12 +61,10 @@
     </FlyoutItem>
 
     <MenuItem Text="Cerrar Sesion"
-          IconImageSource="random.png"
               Command="{Binding LogoutCommand}"/>
 
     <ShellContent
          Title="Iniciar Sesion"
-         Icon="dog.png"
          ContentTemplate="{DataTemplate views:IniciarSesionView}"
          Route="Login"
         IsVisible="{Binding IsUserLogout}"/>
