--- a/ReservasHoteleriaWeb/Layout/NavMenu.razor
+++ b/ReservasHoteleriaWeb/Layout/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject FirebaseAuthService AuthService
+@inject NavigationManager NavigationManager
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">ReservasHoteleriaWeb</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -14,14 +17,38 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
+        @if (isAuthenticated)
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Reservas">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Reservas
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Servicios">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Servicios
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="ServiciosAdicionales">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Servicios Adicionales
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Empleados">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Empleados
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Habitaciones">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Habitaciones
+                </NavLink>
+            </div>
+        }
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="login">
+                <span class="bi bi-login" aria-hidden="true"></span> @textoLogin
             </NavLink>
         </div>
     </nav>
@@ -29,11 +56,24 @@
 
 @code {
     private bool collapseNavMenu = true;
+    private bool isAuthenticated = false;
+    private string textoLogin => isAuthenticated ? "Cerrar Sesion" : "Login";
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+    protected override async Task OnInitializedAsync()
+    {
+        isAuthenticated = await AuthService.IsUserAuthenticated();
+        AuthService.OnChangeLogin += ChequeoEstadoLogin;
+    }
+
+    public async void ChequeoEstadoLogin()
+    {
+        isAuthenticated = await AuthService.IsUserAuthenticated();
+        StateHasChanged();
     }
 }
