--- a/ReservasHoteleriaWeb/_Imports.razor
+++ b/ReservasHoteleriaWeb/_Imports.razor
@@ -8,3 +8,9 @@
 @using Microsoft.JSInterop
 @using ReservasHoteleriaWeb
 @using ReservasHoteleriaWeb.Layout
+@using ReservasHoteleriaWeb.Components.Commons
+@using ReservasHoteleriaServices.Interfaces
+@using ReservasHoteleriaServices.Models
+@using ReservasHoteleriaServices.Services
+@using CurrieTechnologies.Razor.SweetAlert2
+@using ReservasHoteleriaWeb.Services
