--- a/ReservaHoteleriaApp/MainPage.xaml
+++ b/ReservaHoteleriaApp/MainPage.xaml
@@ -8,28 +8,17 @@
             Padding="30,0"
             Spacing="25">
             <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+                Source="photo.png"
+                HeightRequest="300" 
+                WidthRequest="300"
+                Aspect="AspectFill"
+                HorizontalOptions="Center"
+                VerticalOptions="Center"/>
 
-            <Label
-                Text="Hello, World!"
+                <Label
+                Text="Bienvenidos a Reservas Hoteleria!!"
                 Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
         </VerticalStackLayout>
     </ScrollView>
 
