--- a/ReservaHoteleriaApp/Views/ServiciosAdicionalesView.xaml
+++ b/ReservaHoteleriaApp/Views/ServiciosAdicionalesView.xaml
@@ -5,12 +5,12 @@
              x:Class="ReservaHoteleriaApp.Views.ServiciosAdicionalesView"
              Title="SERVICIOS ADICIONALES"
              NavigationPage.HasNavigationBar="False">
-    
+
     <ContentPage.BindingContext>
         <viewModels:ServiciosAdicionalesViewModel/>
     </ContentPage.BindingContext>
 
-    <Grid RowDefinitions="Auto, *, Auto, Auto"
+    <Grid RowDefinitions="Auto, *, Auto, Auto, Auto"
           BackgroundColor="#F2F6F9"
           Padding="10,20">
 
@@ -66,44 +66,39 @@
             </ListView>
         </ScrollView>
 
-        <!-- Botón para agregar servicios -->
-        <Button Text="Agregar Servicio"
-                Command="{Binding AgregarServiciosAdicionalesCommand}"
-                BackgroundColor="#3B82F6"
-                TextColor="#FFFFFF"
-                FontAttributes="Bold"
-                CornerRadius="8"
-                HorizontalOptions="Fill"
-                VerticalOptions="Center"
-                Margin="20,10"
-                HeightRequest="50"
-                Grid.Row="2" />
+        <!-- Botones para acciones -->
+        <HorizontalStackLayout Grid.Row="2"
+                       HorizontalOptions="Fill"
+                       VerticalOptions="Center"
+                       Spacing="10"
+                       Margin="20,10">
+            <Button Text="Agregar Servicio"
+                    Command="{Binding AgregarServiciosAdicionalesCommand}"
+                    BackgroundColor="#3B82F6"
+                    TextColor="#FFFFFF"
+                    FontAttributes="Bold"
+                    CornerRadius="8"
+                    WidthRequest="150" 
+                    HeightRequest="50" />
 
-        <!-- Botón para editar servicios -->
-        <Button Text="Editar Servicio"
-                Command="{Binding EditarServiciosAdicionalesCommand}"
-                BackgroundColor="#10B981"
-                TextColor="#FFFFFF"
-                FontAttributes="Bold"
-                CornerRadius="8"
-                HorizontalOptions="Fill"
-                VerticalOptions="Center"
-                Margin="20,10"
-                HeightRequest="50"
-                Grid.Row="3" />
+            <Button Text="Editar Servicio"
+                    Command="{Binding EditarServiciosAdicionalesCommand}"
+                    BackgroundColor="#10B981"
+                    TextColor="#FFFFFF"
+                    FontAttributes="Bold"
+                    CornerRadius="8"
+                    WidthRequest="150"
+                    HeightRequest="50" />
 
-        <!-- Botón para eliminar servicios -->
-        <Button Text="Eliminar Servicio"
-                Command="{Binding EliminarServicioAdicionalCommand}"
-                BackgroundColor="#10B981"
-                TextColor="#FFFFFF"
-                FontAttributes="Bold"
-                CornerRadius="8"
-                HorizontalOptions="Fill"
-                VerticalOptions="Center"
-                Margin="20,10"
-                HeightRequest="50"
-                Grid.Row="4"/>
+            <Button Text="Eliminar Servicio"
+            Command="{Binding EliminarServicioAdicionalCommand}"
+            BackgroundColor="#EF4444"
+            TextColor="#FFFFFF"
+            FontAttributes="Bold"
+            CornerRadius="8"
+            WidthRequest="150"
+            HeightRequest="50" />
+        </HorizontalStackLayout>
 
     </Grid>
 </ContentPage>
