--- a/ReservasHoteleriaWeb/Layout/MainLayout.razor.css
+++ b/ReservasHoteleriaWeb/Layout/MainLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background: linear-gradient(135deg, rgb(31, 60, 136), rgb(0, 153, 102));
 }
 
 .top-row {
