--- a/ReservasHoteleriaWeb/wwwroot/css/app.css
+++ b/ReservasHoteleriaWeb/wwwroot/css/app.css
@@ -1,5 +1,5 @@
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, Arial, Fans-serif;
 }
 
 h1:focus {
