--- a/ReservaHoteleriaApp/Views/ServiciosAdicionalesView.xaml
+++ b/ReservaHoteleriaApp/Views/ServiciosAdicionalesView.xaml
@@ -52,7 +52,8 @@
                                    Padding="15"
                                    Margin="10"
                                    BackgroundColor="#FFFFFF"
-                                   HasShadow="True">
+                                   HasShadow="True"
+                                   InputTransparent="True">
                                 <StackLayout>
                                     <Label Text="{Binding TipoServicio}"
                                            FontSize="Medium"
