--- a/ReservaHoteleriaApp/Views/ServiciosAdicionalesView.xaml
+++ b/ReservaHoteleriaApp/Views/ServiciosAdicionalesView.xaml
@@ -52,7 +52,8 @@
                    Padding="10"
                    Margin="5"
                    BackgroundColor="#FFFFFF"
-                   HasShadow="False">
+                   HasShadow="False"
+                             InputTransparent="True"     >
                                 <StackLayout>
                                     <Label Text="{Binding TipoServicio}"
                            FontSize="Small"
@@ -63,6 +64,7 @@
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
+
 
             </ListView>
         </ScrollView>
