Actualización de títulos en páginas .razor
Se han actualizado los títulos de las páginas para reflejar que pueden ser utilizadas tanto para crear como para editar elementos. Los cambios específicos son:

* `NuevoEditarEmpleado.razor`: "Nuevo Empleado" a "Nuevo/Editar Empleado".
* `NuevaEditarHabitacion.razor`: "Nueva Habitacion" a "Nueva/Editar Habitacion".
* `SingUp.razor`: "SignUp" a "Registrarse".
* `NuevaEditarReserva.razor`: "Nueva Reserva" a "Nueva/Editar Reserva".
* `NuevoEditarServicioAdicional.razor`: "Nuevo Servicio Adicional" a "Nuevo/Editar Servicio Adicional".

--- a/ReservasHoteleriaWeb/Pages/Empleados/NuevoEditarEmpleado.razor
+++ b/ReservasHoteleriaWeb/Pages/Empleados/NuevoEditarEmpleado.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager NavigationManager
 @inject SweetAlertService SweetAlert
 
-<HeaderPage TitlePage="Nuevo Empleado" />
+<HeaderPage TitlePage="Nuevo/Editar Empleado" />
 @if (empleado == null)
 {
     <p><em>Cargando...</em></p>
