--- a/ReservasHoteleriaWeb/Pages/Habitaciones/NuevaEditarHabitacion.razor
+++ b/ReservasHoteleriaWeb/Pages/Habitaciones/NuevaEditarHabitacion.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager NavigationManager
 @inject SweetAlertService SweetAlert
 
-<HeaderPage TitlePage="Nueva Habitacion" />
+<HeaderPage TitlePage="Nueva/Editar Habitacion" />
 @if (habitacion == null)
 {
     <p><em>Cargando...</em></p>
