--- a/ReservasHoteleriaWeb/Pages/Login/SingUp.razor
+++ b/ReservasHoteleriaWeb/Pages/Login/SingUp.razor
@@ -3,7 +3,7 @@
 @inject FirebaseAuthService AuthService
 @inject SweetAlertService SweetAlert
 
-<HeaderPage TitlePage="SignUp" />
+<HeaderPage TitlePage="Registrarse" />
 
 <div class="card text-center">
    
