--- a/ReservasHoteleriaWeb/Pages/Reservas/NuevaEditarReserva.razor
+++ b/ReservasHoteleriaWeb/Pages/Reservas/NuevaEditarReserva.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager NavigationManager
 @inject SweetAlertService SweetAlert
 
-<HeaderPage TitlePage="Nueva Reserva" />
+<HeaderPage TitlePage="Nueva/Editar Reserva" />
 @if (reserva == null || habitaciones == null)
 {
     <p><em>Cargando...</em></p>
