--- a/ReservasHoteleriaWeb/Pages/ServiciosAdicionales/NuevoEditarServicioAdicional.razor
+++ b/ReservasHoteleriaWeb/Pages/ServiciosAdicionales/NuevoEditarServicioAdicional.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager NavigationManager
 @inject SweetAlertService SweetAlert
 
-<HeaderPage TitlePage="Nuevo Servicio Adicional" />
+<HeaderPage TitlePage="Nuevo/Editar Servicio Adicional" />
 @if (servicioAdicional == null)
 {
     <p><em>Cargando...</em></p>
